--- a/style.css
+++ b/style.css
@@ -36,24 +36,31 @@ h2 {
 }
 
 .image-1 {
-height: 200px;
-width: 200px;
-border: solid orange 3px;
+height:75px;
+width: 75px;
+border: solid orange 3px
+;
 }
 
 .image-2 {
-height: 200px;
-width: 200px;
+height: 75px;
+width: 75px;
 border: solid orange 3px;
+img-align="left";
 }
 
 .image-3 {
-height: 200px;
-width: 200px;
+height: 75px;
+width: 75px;
 border: solid orange 3px;
+img align: "right";                                                                         
 }
 
 a {
 	font-family: Arial, Times, Garamond;
 	font-weight: bold;
 }
+.img
+display: block;
+    margin-left: auto;
+    margin-right: auto;
