--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ div#footer li {
 	vertical-align: middle;
 }
 
-h5 {
+h6 {
 font-family: Georgia, Garamond, Serif;
 font-size: 16px;
 font-weight: bold;
@@ -159,3 +159,30 @@ textarea{
   border: 1px solid;
 	}
 
+h5 {
+	font-family: Georgia, Garamond, Serif;
+	font-size: 24px;
+	color: navy;
+	font-weight: bold;
+	text-align: center;
+
+}
+
+img.proj1 {
+ 	max-height: 200px;
+max-width: 200px;
+margin-right: 55%;
+float: right;
+border: teal solid 3px;
+border-radius: 75px;
+display: block;
+	}
+
+	img.proj2 {
+		max-height: 200px;
+max-width: 200px;
+margin-left: 55%;
+border: teal solid 3px;
+border-radius: 75px;
+display: block;
+	}
