--- a/style.css
+++ b/style.css
@@ -168,21 +168,39 @@ h5 {
 
 }
 
-img.proj1 {
- 	max-height: 200px;
-max-width: 200px;
-margin-right: 55%;
-float: right;
-border: teal solid 3px;
-border-radius: 75px;
-display: block;
-	}
+.thumbnail{
+position: relative;
+z-index: 0;
+}
 
-	img.proj2 {
-		max-height: 200px;
-max-width: 200px;
-margin-left: 55%;
-border: teal solid 3px;
-border-radius: 75px;
-display: block;
-	}
+.thumbnail:hover{
+background-color: transparent;
+z-index: 50;
+}
+
+.thumbnail span{ 
+position: absolute;
+background-color: lightyellow;
+padding: 5px;
+left: -1000px;
+border: 1px dashed teal;
+visibility: hidden;
+color: teal;
+text-decoration: none;
+}
+
+.thumbnail span img{ 
+border-width: 0;
+padding: 2px;
+max-width: 500px;
+max-height: 500px;
+}
+
+.thumbnail:hover span{ 
+visibility: visible;
+top: 0;
+left: 60px; 
+
+}
+
+
